--- a/slides/01_presentation.html
+++ b/slides/01_presentation.html
@@ -4,6 +4,7 @@
     <h4>Leader communautaire</h4>
     <p><a href="https://codeursenseine.com/" target="_blank">CodeursEnSeine</a></p>
     <p><a href="https://www.linkedin.com/in/ypetit/">linkedin.com/in/ypetit</a></p>
+    <p><a href="https://github.com/finalspy">github.com/finalspy</a></p>
 </section>
 <section>
     <h2>Présentation</h2>
@@ -54,6 +55,7 @@
 </section>
 <section>
     <h2>Contact</h2>
-    <p>📧 <a href="mailto:yann.petit@example.com">yann@ypetit.net</a></p>
+    <p>📧 <a href="mailto:yann.petit@gmail.com">yann.petit@gmail.com</a></p>
     <p>🔗 <a href="https://www.linkedin.com/in/ypetit/">linkedin.com/in/ypetit</a></p>
+    <p>🔗 <a href="https://github.com/finalspy">github.com/finalspy</a></p>
 </section>
