--- a/slides/06_concepts_A_Theoremes.html
+++ b/slides/06_concepts_A_Theoremes.html
@@ -5,6 +5,7 @@
   <h1>Concepts clés</h1>
   <ul>
     <li><b>🔺 Théorèmes fondamentaux</b></li>
+    <li>🌐 Concepts et Techniques Clés</li>
     <li>🧩 Architecture et Design</li>
     <li>🛡️ Résilience et Scalabilité</li>
     <li>🧪 Tests et Observabilité</li>
